--- a/register-backend/package.json
+++ b/register-backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "mongodb": "^5.5.0",
     "mongoose": "^6.8.4",
     "nodemon": "^2.0.20"
   }
