--- a/register-backend/package.json
+++ b/register-backend/package.json
@@ -14,6 +14,8 @@
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongoose": "^6.8.4",
-    "nodemon": "^2.0.20"
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.20",
+    "twilio": "^4.11.0"
   }
 }
