--- a/register/package.json
+++ b/register/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "jquery": "^3.7.0",
     "react": "^18.2.0",
