--- a/register/package.json
+++ b/register/package.json
@@ -17,6 +17,8 @@
     "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-session-hook": "^2.0.1",
